[#176457380] Some more style edits

--- a/experimental-features.html.md.erb
+++ b/experimental-features.html.md.erb
@@ -10,6 +10,7 @@ This topic highlights features that are only recommended for advanced users of B
 
 As of v1.9.0, the BBR CLI has an `--unsafe-lock-free` flag.
 This flag should only be used by expert users of BBR, for reasons that this page highlights.
+
 If you use this flag during a backup operation, BBR will skip running the lock and unlock scripts in
 your deployment.
 In the case of backing up a Cloud Foundry deployment, you would prevent Cloud Foundry API (CAPI)
@@ -38,11 +39,11 @@ If you back up Cloud Foundry while an app is being pushed, your backup of the CC
 reference to this app, while your backup of the blobstore does not contain the app's droplet.
 If you attempt to restore this backup, the app fails to start.
 
-To avoid this sort of problem, BBR locks Cloud Foundry before taking a backup and, as a side-effect,
+To avoid this sort of problem, BBR locks Cloud Foundry before creating a backup and, as a side-effect,
 the CAPI goes down during the critical phase of the backup.
 The `--unsafe-lock-free` flag disables this safety feature.
-If you use it you will prevent CAPI downtime, but you will not be protected from backup
-inconsistencies such as the one described here.
+If you use it you prevent CAPI downtime, but you lose protection from backup inconsistencies such as
+the one described above.
 
 
 ### <a id="missing-blob"> Missing Blob
@@ -50,66 +51,71 @@ inconsistencies such as the one described here.
 #### Symptom
 
 After restoring this inconsistent backup, some apps failed to start.
-Running `cf events APP-NAME` yields output similar to the below:
+Running `cf events APP-NAME` prints output similar to the below:
 
 ```bigquery
 time                          event                       actor          description
 2020-10-28T11:10:21.00+0000   app.crash                   APP-NAME       index: 0, reason: CRASHED, cell_id: 03fdc92e-8d5e-447c-a894-52f62b5f9c8e, instance: 2e2ae69a-c750-4da6-7339-5240, exit_description: Downloading droplet failed
 ```
-This is a sign that the app's droplet is missing from the blobstore.
+This suggests the app's droplet is missing from the blobstore.
 
 #### Explanation
 
 In testing, we caused this issue by artificially delaying the blobstore backup part of the BBR backup
-process while concurrently deleting an app.
+process while deleting an app.
 
-This issue might occur if a user deletes or creates an app at a critical point during the backup
+This issue might also occur if a user creates an app at a critical point during the backup
 process. In either case, we expect only the newly deleted or created app to be affected.
 
 #### Solutions
 
 If the app's package is present in the blobstore, you can fix the issue by running
 `cf restage APP-NAME`.
-However, if the droplet is missing due to an inconsistent backup, there is a good chance that the
-corresponding package is also missing. In this case, the only way to recover is to re-push the app.
+However, if the droplet is missing due to an inconsistent backup, the corresponding package is likely
+also missing. In this case, the only way to recover is to re-push the app.
 
 You can prevent this issue altogether by doing any of the following:
 
 * Using an external blobstore, such as Minio
 * Using the native replication features of your external blobstore to keep your own backups separate
 from BBR
-* Setting a retention policy on your replica blobstore, so that no files are truly deleted until they
+* Setting a retention policy on your replica blobstore so that no files are truly deleted until they
 are marked as deleted for a certain number of days.<br><br>
-Before you perform a `bbr restore`, first restore your blobstore from your replica or swap out the
-live store for the replica.<br>
+Before you run `bbr restore`, restore your blobstore from your replica or swap out the live store for
+the replica.<br>
 This gives you a certain period of time in which all your backups are valid.
-If you restore a backup older than that period, you will still be susceptible to this issue.
+If you restore a backup older than that period, you are still susceptible to this issue.
 
 
 ### <a id="unstarted"></a> Unstarted App
 
+#### Symptom
+
 After restoring, some apps did not even attempt to start.
 
-**When might this happen?**
+#### Explanation
 
 If an app is pushed at a critical point during the backup process, the app can get created before the
 Cloud Controller database (CCDB) is backed up, but started after the CCDB is backed up.
 The result is an app which is backed up in a stopped state.
 
-**Possible Mitigations**
+#### Solution
 
 Run `cf start APP-NAME`.
-If this fails, check that you are not missing blobs as described above.
+If this fails, check that you are not missing blobs as described in [Missing Blob](#missing-blob)
+above.
 
 
 ### <a id="incomplete"></a> An Incomplete User
+
+#### Symptom
 
 After restoring these inconsistent backups, we observed that:
 
 * A Cloud Foundry user existed who had no name and no credentials
 * A set of Cloud Foundry user credentials existed with no corresponding user
 
-**When might this happen?**
+#### Explanation
 
 In testing, we caused variants of this issue by creating or deleting a Cloud Foundry user at a
 critical point during the backup process.
@@ -123,14 +129,14 @@ In another case, the backup took a snapshot of the CCDB after a user was deleted
 before the user was deleted. This left a set of garbage credentials in the UAADB which were connected
 to no users, and consequently had no access to anything in the system.
 
-**Possible Mitigations**
+#### Solutions
 
 Delete the half-created user if possible.
 
-You can avoid this issue entirely by not creating or deleting users during the backup process.
+You can avoid this issue entirely by:
 
-You can also avoid this issue by using LDAP or similar, rather than managing users directly in Cloud
-Foundry.
+* Not creating or deleting users during the backup process.
+* Using LDAP or similar, rather than managing users directly in Cloud Foundry.
 
 
 ## <a id="tshoot-theo"></a> Troubleshooting Theoretical --unsafe-lock-free Issues
@@ -145,7 +151,7 @@ An app appears to start successfully, but is not reachable from the outside worl
 Alternatively, container-to-container networking routes are unavailable, preventing your microservices
 from communicating with each other as expected.
 
-We tried to force this error case in the lab, but were unable to.
+We were unable to force this error case in the lab.
 Apps in Cloud Foundry can register their own routes, so it is possible that the error briefly
 occurred but self-corrected before we were able to observe it.
 
@@ -156,13 +162,13 @@ This is a security risk if the route points to a container that should not be ex
 internet.
 
 However, routes in Cloud Foundry are short-lived by design: they must be constantly renewed by the
-app that claims them. So even in the worst case scenario we expect this problem to self-correct
+app that claims them. So, even in the worst case scenario, we expect this problem to self-correct
 shortly after the restore.
 
 **An app has CredHub bindings <%# to data services? %> which are not in CredHub database**
 
-An app might try to access to a data service even though the relevant credentials no longer exist.
-The app would fail to access the data service at runtime and possibly crash or behave unexpectedly.
+An app tries to access a data service even though the relevant credentials no longer exist, causing
+the app to fail to access the data service at runtime and possibly crash or behave unexpectedly.
 
 **An app is missing an autoscaler entry**
 
@@ -180,10 +186,10 @@ expect many Cloud Foundry users of `--unsafe-lock-free` to also use <%# an? the?
 
 **A user who does not exist in UAADB owns a space in CCDB**
 
-If this happened, we worried that a Cloud Foundry Space might be effectively inaccessible, with its
-users missing.
+A user who does not exist in UAADB owns a space in CCDB, making that Cloud Foundry space effectively
+inaccessible.
 
-We failed to force this error in the lab.
+We were unable to force this error in the lab.
 The order in which Cloud Controller manages user and space creation and deletion perhaps makes
 this issue impossible or just very unlikely to occur.
 
