--- a/experimental-features.html.md.erb
+++ b/experimental-features.html.md.erb
@@ -80,7 +80,7 @@ You can prevent this issue altogether by doing any of the following:
 * Using the native replication features of your external blobstore to keep your own backups separate
 from BBR
 * Setting a retention policy on your replica blobstore so that no files are truly deleted until they
-are marked as deleted for a certain number of days.<br><br>
+are marked as deleted for a certain number of days.<br>
 Before you run `bbr restore`, restore your blobstore from your replica or swap out the live store for
 the replica.<br>
 This gives you a certain period of time in which all your backups are valid.
